              where possible.  This includes pruning on non-orientable
              vertex links, too many or too few vertices or edges, low
              degree or invalid edges, conical faces and L(3,1) spines.
        Class NLayeredSolidTorus:
            - New routine formsLayeredSolidTorusTop() for finding an LST
              from the top end instead of the bottom.
        Class NPluggedIBundle, NPluggedIBundleCore, NTorusPlug:
            - Added for recognition of small closed non-orientable
              3-manifolds.
        Class NSFS, NSFSpace, NExceptionalFibre, NSFSFibre:
            - Complete overhaul of the Seifert fibred space classes.
              Now more general, supporting both orientable and
              non-orientable 3-manifolds as well as base orbifolds with
              reflector boundary components.
        Class NTriangulation:
            - Combined isomorphism and subcomplex testing routines into
              a single all-in-one routine to avoid excessive code reuse.
            - New routine findAllSubcomplexesIn() for subcomplex testing
              in which all matches (not just the first) should be returned.
            - Routines getTetrahedronIndex(), getComponentIndex(),
              getBoundaryComponentIndex(), getFaceIndex(), getEdgeIndex()
              and getVertexIndex() all returned signed instead of unsigned
              longs, so that -1 can be returned if the object could not
              be found.
    UTILITIES:
        tricensus-mpi:
            - Significant overhaul.
            - Now supports finer-grained subsearches via --depth.
            - Better logging.
            - Only writes .rga data files for cases in which at least
              one triangulation was found.
            - New option --dryrun for a quick overview of the search space.
        tricensus-mpi-status:
            - New tool for parsing tricensus-mpi logs.  Currently only