@@ -27,6 +27,8 @@ Version 4.3  [ under development ]
         Class NLayeredSolidTorus:
             - New routine formsLayeredSolidTorusTop() for finding an LST
               from the top end instead of the bottom.
+        Class NPerm:
+            - The assignment operator now returns a reference instead of void.
         Class NPluggedIBundle, NPluggedIBundleCore, NTorusPlug:
             - Added for recognition of small closed non-orientable
               3-manifolds.
